Update: Copyright year 2026, added Zion Groceries project, deployment guide

--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
                 </div>
                 <div class="portfolio-item" data-category="web">
                     <div class="portfolio-image">
-                        <div class="placeholder-image">Portfolio Site</div>
+                        <div class="placeholder-image">🥬 Zion Groceries</div>
                         <div class="portfolio-overlay">
-                            <h4>Personal Portfolio</h4>
-                            <p>Web Development</p>
-                            <a href="#" class="portfolio-link">View Project</a>
+                            <h4>Zion Groceries</h4>
+                            <p>Fresh Vegetables & Fruits Online Shop</p>
+                            <a href="https://github.com/Daniel-gats/zion-groceries" target="_blank" class="portfolio-link">View on GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -366,7 +366,7 @@
         <div class="container">
             <div class="footer-content">
                 <a href="#" class="logo">Daniel<span>.</span></a>
-                <p>&copy; 2024 Daniel Mugo Gatonye. All rights reserved. Crafted with ❤️</p>
+                <p>&copy; 2026 Daniel Mugo Gatonye. All rights reserved. Crafted with ❤️</p>
                 <a href="#home" class="back-to-top">↑</a>
             </div>
         </div>
