Update: Portfolio with G-man Groceries v2.0 details

--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
                 </div>
                 <div class="portfolio-item" data-category="web">
                     <div class="portfolio-image">
-                        <div class="placeholder-image">🥬 Zion Groceries</div>
+                        <div class="placeholder-image">🥬 G-man Groceries</div>
                         <div class="portfolio-overlay">
-                            <h4>Zion Groceries</h4>
-                            <p>Fresh Vegetables & Fruits Online Shop</p>
-                            <a href="https://github.com/Daniel-gats/zion-groceries" target="_blank" class="portfolio-link">View on GitHub</a>
+                            <h4>G-man Groceries</h4>
+                            <p>Fresh Vegetables & Fruits Online Shop - 65+ Products, WhatsApp Integration, Auto-Reply System</p>
+                            <a href="https://github.com/Daniel-gats/-zion-groceries" target="_blank" class="portfolio-link">View on GitHub</a>
                         </div>
                     </div>
                 </div>
