Update: G-man Groceries project with 250 products

--- a/index.html
+++ b/index.html
@@ -199,21 +199,11 @@
                 </div>
                 <div class="portfolio-item" data-category="web">
                     <div class="portfolio-image">
-                        <div class="placeholder-image">🥬 G-man Groceries</div>
+                        <div class="placeholder-image grocery-project">🥬 G-man Groceries</div>
                         <div class="portfolio-overlay">
                             <h4>G-man Groceries</h4>
-                            <p>Fresh Vegetables & Fruits Online Shop - 65+ Products, WhatsApp Integration, Auto-Reply System</p>
-                            <a href="https://github.com/Daniel-gats/-zion-groceries" target="_blank" class="portfolio-link">View on GitHub</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio-item" data-category="web">
-                    <div class="portfolio-image">
-                        <div class="placeholder-image grocery-project">🥬 Zion Groceries</div>
-                        <div class="portfolio-overlay">
-                            <h4>Zion Groceries</h4>
-                            <p>Full-Stack E-Commerce App</p>
-                            <a href="https://zion-groceries.vercel.app" class="portfolio-link" target="_blank">View Project</a>
+                            <p>Full-Stack E-Commerce - 250 Products, WhatsApp Auto-Reply, Modern UI</p>
+                            <a href="https://zion-groceries.vercel.app" class="portfolio-link" target="_blank">View Live Site</a>
                         </div>
                     </div>
                 </div>
